fix: favicon added and space issue resolved in mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>VDomainInsightFrontend</title>
+  <title>Domain Insight</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/domains.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="Domain Insight is a powerful domain checker tool to instantly retrieve domain ownership, DNS, registrar, and server data. Fast, accurate, and free.">
+  <meta name="keywords" content="domain insight, domain checker, whois lookup, dns check, domain lookup tool, server info, registrar details, domain status">
+  <meta name="author" content="Vigneshwaran">
+  <meta name="robots" content="index, follow" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Domain Insight" />
+  <meta property="og:description" content="Check domain information including ownership, registrar, DNS, and server data instantly." />
+  <meta property="og:url" content="https://domain-insight.live" />
+
+   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Domain Insight" />
+  <meta name="twitter:description" content="Instantly retrieve full domain data: WHOIS, DNS, server details and more." />
+
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Domain+Insight" />
+<meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Domain+Insight" />
+
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
